--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="@drawable/chat">
+                    android:background="@drawable/chatl">
                     <EditText
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
